cmake_minimum_required(VERSION 3.16)
project(project4)

set(CMAKE_CXX_STANDARD 14)

add_executable(project4 main.cpp
        Automaton.h
        ColonAutomaton.cpp
        ColonAutomaton.h
        ColonDashAutomaton.cpp
        ColonDashAutomaton.h
        Lexer.cpp
        Lexer.h
        main.cpp
        Token.cpp
        Token.h
        StringAutomaton.cpp
        StringAutomaton.h
        PeriodAutomaton.cpp
        PeriodAutomaton.h
        FactsAutomaton.cpp
        FactsAutomaton.h
        SchemesAutomaton.cpp
        SchemesAutomaton.h
        QueriesAutomaton.cpp
        QueriesAutomaton.h
        Q_MarkAutomaton.cpp
        Q_MarkAutomaton.h
        AddAutomaton.cpp
        AddAutomaton.h
        MultiplyAutomaton.cpp
        MultiplyAutomaton.h
        LeftParenAutomaton.cpp
        LeftParenAutomaton.h
        RightParenAutomaton.h
        RightParenAutomaton.cpp
        RulesAutomaton.cpp
        RulesAutomaton.h
        UndefinedAutomaton.cpp
        UndefinedAutomaton.h
        IDAutomaton.cpp
        IDAutomaton.h
        CommaAutomaton.cpp
        CommaAutomaton.h
        CommentAutomaton.cpp
        CommentAutomaton.h
        EOFAutomaton.cpp
        EOFAutomaton.h
        Parser.cpp
        Parser.h
        Parameter.cpp
        Parameter.h
        Predicate.cpp
        Predicate.h
        DatalogProgram.h
        DatalogProgram.cpp
        Rule.cpp
        Rule.h
        Tuple.cpp
        Tuple.h
        Header.cpp
        Header.h
        Relation.cpp
        Relation.h
        Database.cpp
        Database.h
        Interpreter.cpp
        Interpreter.h
        Graph.cpp Graph.h)
